@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.estuary.uMod" version="2.9.0" name="Estuary uMod" provider-name="darkozma, devalls, phil65, Ichabod Fletchman">
+<addon id="skin.estuary.uMod" version="2.9.8" name="Estuary uMod" provider-name="darkozma, devalls, phil65, Ichabod Fletchman">
 	<requires>
 		<import addon="xbmc.gui" version="5.12.0"/>
 	</requires>
@@ -38,7 +38,8 @@
 			<screenshot>resources/screenshot-09.png</screenshot>
 		</assets>
 		<news>[COLOR blue][B]Skin Estuary uMod[/B][/COLOR]
-[COLOR green][B]•2.9.0[/B] Change categories PM and update Screenshot.[/COLOR]
+[COLOR green][B]•2.9.8[/B] Change categories GT/NF.[/COLOR]
+[COLOR yellow][B]•2.9.0[/B] Change categories PM and update Screenshot.[/COLOR]
 [COLOR yellow][B]•2.8.9[/B] Update languages.[/COLOR]
 [COLOR yellow][B]•2.8.8[/B] Change homescreen links.[/COLOR]
 [COLOR yellow][B]•2.8.6[/B] Minor bug fix.[/COLOR]
